--- a/src/components/BlogList.module.css
+++ b/src/components/BlogList.module.css
@@ -1,76 +1,137 @@
 /* /components/BlogList.module.css */
 
 .blogList {
-    margin: 40px auto;
-    padding: 20px;
-    max-width: 1280px;
-    /* background-color: #f8f8f8; */
-    border-radius: 8px;
-    /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); */
+  margin: 40px auto;
+  margin-top: 0px;
+  padding: 20px;
+  padding-top: 0px;
+  max-width: 1280px;
+  border-radius: 8px;
+}
+
+.aboveContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.belowContainer {}
+
+.sliderContainer {
+  width: 100%; /* 使用百分比以适应不同屏幕 */
+  max-width: 1280px;
+  height: 450px;
+  /* background-color: aliceblue; */
+  margin-bottom: 40px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+
+.sliderImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.heading {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 2rem;
+  color: #333;
+}
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.blogCard {
+  padding: 20px;
+  border: 0.5px solid #888;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 5px 5px rgba(0, 187, 212, 0.1);
+}
+
+.blogCard:hover {
+  box-shadow: 0px 0px 5px 5px rgba(0, 187, 212, 0.3);
+}
+
+.date {
+  font-size: 0.8rem;
+  color: #888;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 1rem;
+  color: #555;
+}
+
+/* 针对平板和手机的响应式布局 */
+@media (max-width: 1024px) {
+  .sliderContainer {
+    height: 350px;
   }
-  
-  .heading {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 2rem;
-    color: #333;
-  }
-  
+
   .cardContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
-  
+
+  .heading {
+    font-size: 1.75rem;
+  }
+
   .blogCard {
-    padding: 20px;
-    border: 0.5px solid #888;
-    border-radius: 8px;
-    background-color: #ffffff;
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); */
-    /* transition: box-shadow 0.3s ease; */
+    padding: 15px;
   }
-  
-  .blogCard:hover {
-    /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); */
-    box-shadow: 0px 0px 5px 5px rgba(0, 187, 212, 0.2);
-  }
-  
-  .date {
-    font-size: 0.8rem;
-    color: #888;
-    margin-bottom: 10px;
-  }
-  
+
   .description {
-    font-size: 1rem;
-    color: #555;
+    font-size: 0.9rem;
   }
-  
-  @media (max-width: 768px) {
-    .heading {
-      font-size: 1.5rem;
-    }
-  
-    .blogCard {
-      padding: 15px;
-    }
-  
-    .description {
-      font-size: 0.9rem;
-    }
+}
+
+@media (max-width: 768px) {
+  .sliderContainer {
+    height: 300px;
   }
-  
-  @media (max-width: 480px) {
-    .heading {
-      font-size: 1.2rem;
-    }
-  
-    .blogCard {
-      padding: 10px;
-    }
-  
-    .description {
-      font-size: 0.8rem;
-    }
+
+  .heading {
+    font-size: 1.5rem;
   }
+
+  .blogCard {
+    padding: 15px;
+  }
+
+  .description {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .sliderContainer {
+    height: 250px;
+  }
+
+  .heading {
+    font-size: 1.2rem;
+  }
+
+  .blogCard {
+    padding: 10px;
+  }
+
+  .description {
+    font-size: 0.8rem;
+  }
+}
